--- a/src/pages/ListTasks.css
+++ b/src/pages/ListTasks.css
@@ -1,3 +1,22 @@
-.container-ListTask{
-  
+.container-list{
+  background-color: rgb(203, 203, 203);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 50%;
+  margin: 0 auto;
+  max-height: 90vh;
+  overflow: auto;
+  padding: 10px;
+  box-shadow: inset 0px 0px 4px 1px rgb(0, 0, 0);
+  border-radius: 5px;
+}
+
+.container-titles{
+  color: rgb(31, 31, 31);
+  display: flex;
+  justify-content: space-around;
+  padding-right: 40%;
+  font-size: 18px;
+  height: 55px;
 }
