--- a/src/components/SelectEmployee.css
+++ b/src/components/SelectEmployee.css
@@ -1,26 +1,25 @@
-.container-selectEmployee{
-  background-color: rgb(200, 179, 179);
+.container-selectEmployee {
+  /* background-color: rgb(200, 179, 179); */
   width: 100%;
-  text-align: center;
-  padding: 0;
+  /* text-align: center; */
+  /* padding: 0; */
 }
 
-.ol-container-selectEmployee {
+/* .ol-container-selectEmployee {
   background-color: rgb(148, 148, 148);
   padding: 0;
-  /* text-align: center; */
-  /* justify-content: center; */
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 78%;
   margin: 20px ;
   overflow: auto;
-
-}
-.container-selectEmployee ol li {
+  max-height: 440px;
+  overflow: auto;
+  
+} */
+/* .container-selectEmployee ol li {
   list-style-type: none;
-  /* text-align: center; */
   background-color: bisque;
   margin: 0 auto;
   margin: 5px;
@@ -28,9 +27,9 @@
   box-sizing: border-box;
   width: 90%;
   cursor: pointer;
-}
+} */
 
-.container-selectEmployee ol li:hover {
+/* .container-selectEmployee ol li:hover {
   background-color: rgb(223, 208, 190);
   
-}
+} */
