--- a/src/pages/ListEmployees.css
+++ b/src/pages/ListEmployees.css
@@ -1,22 +1,18 @@
-.ul-listEmployees{
-  margin: 0;
-  padding: 0;
-  background-color: rgb(148, 148, 148);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 78%;
-  margin: 0 auto;
+.container-ListEmployees{
+  width: 75vw;
+  float: left;
+  box-sizing: border-box;
+  position: relative;
+  /* margin: 0 auto; */
+  background-color: blue;
+  max-height: 100vh;
   overflow: auto;
-  width: 600px;
+
 }
 
-.li-listEmployees{
-  list-style-type: none;
-  background-color: bisque;
-  margin: 5px;
-  padding: 10px 30px;
-  box-sizing: border-box;
-  width: 90%;
-  cursor: pointer;
+@media screen and (max-width: 600px) {
+  .container-ListEmployees{
+    width: 100vw;
+    float: none;
+  }
 }
