--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,4 +1,4 @@
-.container-sidebar{
+.container-sidebar {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,45 +8,18 @@
   float: left;
   text-align: center;
   font-family: sans-serif;
-}
-
-.navLink{
-  text-decoration: none;
-  color: black;
-  padding: .7rem;
-  width: 10rem;
-  box-sizing: border-box;
-  border-radius: 30px;
-  background: rgb(211, 211, 255);
-  margin: .2rem;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.895);
-  transition: background .2s;
-}
-
-.navLink:hover{
-  background: rgb(123, 122, 122);
-}
-.navLink:active{
-  box-shadow: inset -1px -1px 1px  rgb(86, 86, 86);
-
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 800px) {
-  .container-sidebar{
-    font-size: .95rem;
-    width:20%;
-  }
-  .navLink{
-    font-size: .75rem;
-    /* padding: .4rem; */
-    margin: .2rem;
-    width: 7rem;
-    height: 40px;
+  .container-sidebar {
+    font-size: 0.95rem;
+    width: 20%;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .container-sidebar{
+  .container-sidebar {
     flex-direction: row;
     justify-content: center;
     width: 100%;
@@ -54,28 +27,15 @@
     height: 13vh;
     gap: 10px;
   }
-  .text-title{
+  .text-title {
     display: none;
   }
 
-  .navLink{
-    font-size: .9rem;
-    padding: .4rem;
-    margin: 0px;
-    width: 20%;
-    background: rgb(208, 197, 197);
-
-  }
 }
 
 @media screen and (max-width: 400px) {
-  .container-sidebar{
+  .container-sidebar {
     gap: 5px;
     height: 12vh;
-  }
-  .navLink{
-    font-size: .8rem;
-    padding: 7px;
-    width: 23%;
   }
 }
