--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -11,9 +11,20 @@
   flex-direction: row;
   background-color: rgb(249, 226, 226);
   width: 95%;
+  height: 60px;
   border-radius: 10px;
   font-size: 17px;
   color: rgb(0, 0, 0);
   box-shadow: inset 0px 0px 1px .3px rgb(0, 0, 0);
   margin: 0 auto;
+}
+
+
+
+
+@media screen and (max-width:400px) {
+  .container-task {
+    font-size: 13px;
+  }
+
 }
