--- a/src/pages/AddTask.css
+++ b/src/pages/AddTask.css
@@ -1,18 +1,27 @@
 .container-addTask {
   background-color: rgb(113, 201, 201);
-  height: 400px;
+  /* background-color: rgb(132, 111, 31); */
+  height: 100vh;
+  max-height: 100vh;
   /* width: 200px; */
   margin: 0 auto;
-  max-width: 50vw;
+  /* max-width: 50vw; */
   display: flex;
+  /* overflow: auto; */
 }
 
 .form-addTask {
-  background-color: antiquewhite;
+  /* background-color: rgb(133, 93, 40); */
   text-align: center;
   box-sizing: border-box;
   padding: 50px 0;
   width: 80%;
+  overflow: auto;
+
+  background-color: rgb(157, 157, 157);
+  border-radius: 15px;
+  /* padding-top: 70px; */
+  box-shadow: inset 0px 0px 10px rgba(46, 46, 46, 0.832), 1px 2px 5px rgb(0, 0, 0);
 }
 
 .input-form-addTask {
@@ -53,4 +62,36 @@
 
 .button-form-addTask:hover {
   background-color: rgb(113, 113, 113);
+}
+
+.container-ListEmployees-addTasks{
+  width: 75vw;
+  float: left;
+  box-sizing: border-box;
+  position: relative;
+  padding: 0 10px;
+  background-color: rgb(113, 113, 113);
+  max-height: 100vh;
+  overflow: auto;
+}
+
+
+@media screen and (max-width:600px) {
+.container-addTask {
+  display: block;
+  /* text-align: center; */
+}
+
+.form-addTask {
+  margin: 0 auto;
+}
+
+.container-ListEmployees-addTasks{
+  margin: 0px auto;
+  float: none;
+  box-sizing: none;
+  padding: 0px 10px;
+  display: block;
+}
+
 }
