--- a/src/pages/ListTasks.css
+++ b/src/pages/ListTasks.css
@@ -1,14 +1,15 @@
 .container-list{
-  background-color: rgb(203, 203, 203);
+  background-color: rgb(175, 175, 175);
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 50%;
+  width: 70%;
+  max-width: 1000px;
   margin: 0 auto;
   max-height: 90vh;
   overflow: auto;
   padding: 10px;
-  box-shadow: inset 0px 0px 4px 1px rgb(0, 0, 0);
+  /* box-shadow: inset 0px 0px 4px 1px rgb(0, 0, 0); */
   border-radius: 5px;
 }
 
@@ -19,4 +20,27 @@
   padding-right: 40%;
   font-size: 18px;
   height: 55px;
+}
+
+@media screen and (max-width:800px) {
+.container-list{
+  width: 70%;
+}
+}
+
+
+@media screen and (max-width:600px) {
+.container-list{
+  width: 90%;
+  
+}
+}
+
+
+@media screen and (max-width:400px) {
+.container-list{
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+}
 }
