--- a/src/components/LinkAddTask.css
+++ b/src/components/LinkAddTask.css
@@ -1,37 +1,30 @@
-.message-withoutTasks{
-  background-color: rgb(92, 196, 161);
+.message-withoutTasks {
+  font-weight: normal;
   font-size: 18px;
-  width: 30%;
-  position: relative;
+  line-height: 1.3;
   margin: 0 auto;
   text-align: center;
   padding: 40px;
-  border-radius: 30px;
+  left: 20px;
 }
 
-.link-message{
-  background-color: transparent;
+.link-message,
+a {
+  text-decoration: none;
+  width: max-content;
 }
 
-
-@media screen and (max-width:600px) {
-
-  .message-withoutTasks{
-  font-size: .9rem;
-  width: 40%;
-  display: block;
-  /* margin: 50px ; */
-  top: 70px;
-  position: relative;
-  /* float: none; */
+@media screen and (max-width: 600px) {
+  .message-withoutTasks {
+    font-size: 1rem;
+    top: 70px;
+    left: 0;
+    position: relative;
   }
 }
 
-
-@media screen and (max-width:400px) {
-  .message-withoutTasks{
-  font-size: .8rem;
-  width: 40%;
-
+@media screen and (max-width: 400px) {
+  .message-withoutTasks {
+    font-size: 0.9rem;
   }
 }
