--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -3,18 +3,19 @@
   flex-direction: column;
   align-items: center;
   width: 200px;
-  background-color: rgb(157, 157, 157);
+  background-color: rgb(59, 142, 151);
   height: 100vh;
   float: left;
   text-align: center;
   font-family: sans-serif;
-  margin-bottom: 20px;
+  gap: 10px;
+  box-shadow: 0px 0px 20px #00000091;
+  border-right: 1px solid #00000061;
 }
 
 @media screen and (max-width: 800px) {
   .container-sidebar {
     font-size: 0.95rem;
-    width: 20%;
   }
 }
 
@@ -22,20 +23,21 @@
   .container-sidebar {
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     width: 100%;
-    background-color: rgb(157, 157, 157);
     height: 13vh;
-    gap: 10px;
+    gap: 5px;
+    box-sizing: border-box;
   }
   .text-title {
     display: none;
   }
-
 }
 
 @media screen and (max-width: 400px) {
   .container-sidebar {
-    gap: 5px;
+    gap: 3px;
     height: 12vh;
+    overflow-x: auto;
   }
 }
