--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,4 +1,4 @@
-.through{
+.through {
   text-decoration: line-through;
   color: rgb(0, 0, 0);
 }
@@ -9,22 +9,27 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  background-color: rgb(249, 226, 226);
-  width: 95%;
+  background-color: rgb(255 255 255);
+  width: 100%;
   height: 60px;
-  border-radius: 10px;
+  border-radius: 3px;
   font-size: 17px;
   color: rgb(0, 0, 0);
-  box-shadow: inset 0px 0px 1px .3px rgb(0, 0, 0);
+  box-shadow: inset 0px 0px 1px 0.3px rgb(0, 0, 0);
   margin: 0 auto;
 }
+.input-edit-task {
+  line-height: 2;
+  padding: 5px 10px;
+  box-sizing: border-box;
+  width: 250px;
+}
 
-
-
-
-@media screen and (max-width:400px) {
+@media screen and (max-width: 400px) {
   .container-task {
     font-size: 13px;
   }
-
+  .input-edit-task {
+    width: 130px;
+  }
 }
