--- a/src/pages/AddEmployee.css
+++ b/src/pages/AddEmployee.css
@@ -1,52 +1,51 @@
-.formAddTask{
+.formAddTask {
   background-color: rgb(157, 157, 157);
   display: flex;
   flex-direction: column;
   padding: 40px 100px;
   gap: 20px;
-  width: 15vw;
+  width: 20%;
+  max-width: 200px;
   margin: 0px auto;
   align-items: center;
-  border-radius: 15px;
+  border-radius: 3px;
   padding-top: 70px;
-  box-shadow: inset 0px 0px 10px rgba(46, 46, 46, 0.832), -5px 5px 10px rgb(0, 0, 0);
+  top: 50px;
+  position: relative;
+  border: 1px solid rgb(0 0 0 / 55%);
 }
 
-.inputAddTask{
+.inputAddTask {
   font-family: sans-serif;
   font-size: 15px;
   line-height: 2;
   padding: 5px 20px;
   border-radius: 20px;
   max-width: 250px;
-  border: none;
-  border: .5px rgb(30, 25, 25) solid;
+  border: 0.5px rgb(30, 25, 25) solid;
 }
 
-.buttonAddTask{
+.buttonAddTask {
   color: white;
   font-size: 15px;
   background-color: rgb(97, 97, 97);
-  border: none;
-  border: .5px solid rgb(53, 53, 53);
+  border: 0.5px solid rgb(53, 53, 53);
   border-radius: 20px;
   padding: 10px 70px;
   cursor: pointer;
 }
-.buttonAddTask:hover{
-background-color: rgb(113, 113, 113);
+.buttonAddTask:hover {
+  background-color: rgb(113, 113, 113);
 }
 
 @media screen and (max-width: 400px) {
-  .formAddTask{
+  .formAddTask {
     gap: 13px;
     width: 20vw;
-    /* font-size: ; */
   }
-.inputAddTask{
-  max-width: 150px;
-  padding: 5px 15px;
-  text-align: center;
-}
-
+  .inputAddTask {
+    max-width: 150px;
+    padding: 5px 15px;
+    text-align: center;
+  }
 }
