--- a/src/pages/AddTask.css
+++ b/src/pages/AddTask.css
@@ -1,27 +1,18 @@
 .container-addTask {
   background-color: rgb(113, 201, 201);
-  /* background-color: rgb(132, 111, 31); */
   height: 100vh;
   max-height: 100vh;
-  /* width: 200px; */
   margin: 0 auto;
-  /* max-width: 50vw; */
   display: flex;
-  /* overflow: auto; */
 }
 
 .form-addTask {
-  /* background-color: rgb(133, 93, 40); */
   text-align: center;
-  box-sizing: border-box;
   padding: 50px 0;
   width: 80%;
-  overflow: auto;
-
+  width: 400px;
   background-color: rgb(157, 157, 157);
-  border-radius: 15px;
-  /* padding-top: 70px; */
-  box-shadow: inset 0px 0px 10px rgba(46, 46, 46, 0.832), 1px 2px 5px rgb(0, 0, 0);
+  border-radius: 3px;
 }
 
 .input-form-addTask {
@@ -36,17 +27,20 @@
 }
 
 .container-userSelected {
+  background: #b4b4b4;
+  width: 200px;
   font-family: sans-serif;
   font-size: 15px;
   line-height: 2;
   padding: 5px 20px;
-  /* border-radius: 20px; */
-  max-width: 180px;
+  border-radius: 20px;
+  max-width: 250px;
   border: none;
   height: 30px;
-  border: 0.5px rgb(30, 25, 25) solid;
+  border: 0.5px rgba(30, 25, 25, 0.87) solid;
   text-align: center;
   margin: 10px auto;
+  box-shadow: inset 0px 0px 27px #5e5e5ea8;
 }
 
 .button-form-addTask {
@@ -64,34 +58,41 @@
   background-color: rgb(113, 113, 113);
 }
 
-.container-ListEmployees-addTasks{
-  width: 75vw;
+.container-ListEmployees-addTasks {
+  width: 350px;
   float: left;
   box-sizing: border-box;
   position: relative;
   padding: 0 10px;
-  background-color: rgb(113, 113, 113);
   max-height: 100vh;
   overflow: auto;
 }
 
+@media screen and (max-width: 600px) {
+  .container-addTask {
+    display: block;
+  }
 
-@media screen and (max-width:600px) {
-.container-addTask {
-  display: block;
-  /* text-align: center; */
-}
+  .form-addTask {
+    margin: 0 auto;
+    position: relative;
+    top: 86px;
+    width: 55%;
+    min-width: 290px;
+    padding: 20px;
+    border: 1px solid rgb(0 0 0 / 55%);
+  }
 
-.form-addTask {
-  margin: 0 auto;
-}
-
-.container-ListEmployees-addTasks{
-  margin: 0px auto;
-  float: none;
-  box-sizing: none;
-  padding: 0px 10px;
-  display: block;
-}
-
+  .container-ListEmployees-addTasks {
+    border: 1px solid rgb(0 0 0 / 55%);
+    box-sizing: border-box;
+    max-height: 230px;
+    margin: 0px auto;
+    float: none;
+    box-sizing: none;
+    padding: 0px 10px;
+    padding: 0;
+    top: 90px;
+    border-radius: 3px;
+  }
 }
